tensors, self-attention

--- a/code/04_llms-from-scratch-book/3-attention.ipynb
+++ b/code/04_llms-from-scratch-book/3-attention.ipynb
@@ -38,6 +38,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 3])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,13 +89,13 @@
     "attention_scores_for_light = torch.empty(inputs.shape[0])\n",
     "\n",
     "# Compute attention scores for each token in the context window\n",
-    "for i, token in enumerate(inputs):\n",
-    "    attention_scores_for_light[i] = torch.dot(query, token)"
+    "for i, token_embedding in enumerate(inputs):\n",
+    "    attention_scores_for_light[i] = torch.dot(query, token_embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +104,7 @@
        "tensor([0.9046, 0.5701, 0.6006, 0.7121, 0.7818, 0.5065])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,17 +117,240 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalize the Attention Scores to Weights\n",
+    "### Step 2 - Normalize the Attention Scores to Weights\n",
     "\n",
     "We want our scores to sum to 1, so we normalize them to create our attention weights"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0000)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "attention_weights_for_light = F.softmax(attention_scores_for_light, dim=0)\n",
+    "sum(attention_weights_for_light)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3 - Compute the Context Vector\n",
+    "Take the input vectors of each token * the attention weights w.r.t. a given token to get that token's context vector (simplified version)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.3039, 0.5600, 0.5155])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_vector_for_light = torch.zeros_like(query)\n",
+    "\n",
+    "for i, token_embedding in enumerate(inputs):\n",
+    "    context_vector_for_light += attention_weights_for_light[i] * token_embedding\n",
+    "\n",
+    "context_vector_for_light"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is one simplified example for updating the input embedding vector for a given token with contextual information that \"attends to\" the other tokens in the context sequence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extending this to All Tokens\n",
+    "1) Compute attention scores\n",
+    "2) Compute attention weights\n",
+    "3) Compute context vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 3])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 6])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs.T.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0931, 0.7524, 0.5787, 0.8090, 0.9046, 0.4809],\n",
+       "        [0.7524, 0.7050, 0.2326, 0.7035, 0.5701, 0.2511],\n",
+       "        [0.5787, 0.2326, 0.7595, 0.6400, 0.6006, 0.6763],\n",
+       "        [0.8090, 0.7035, 0.6400, 1.0946, 0.7121, 0.6846],\n",
+       "        [0.9046, 0.5701, 0.6006, 0.7121, 0.7818, 0.5065],\n",
+       "        [0.4809, 0.2511, 0.6763, 0.6846, 0.5065, 0.6477]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the dot product of the input embeddings with themselves\n",
+    "# Matrix multiplication (@) of the input embeddings with their transpose (.T)\n",
+    "attention_scores = inputs @ inputs.T\n",
+    "attention_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each row above is an attention score vector for that token in our context window."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2256, 0.1605, 0.1349, 0.1698, 0.1869, 0.1223],\n",
+       "        [0.2024, 0.1931, 0.1204, 0.1928, 0.1687, 0.1226],\n",
+       "        [0.1641, 0.1161, 0.1966, 0.1745, 0.1677, 0.1809],\n",
+       "        [0.1705, 0.1534, 0.1440, 0.2268, 0.1547, 0.1505],\n",
+       "        [0.2068, 0.1480, 0.1526, 0.1706, 0.1829, 0.1389],\n",
+       "        [0.1552, 0.1233, 0.1887, 0.1902, 0.1592, 0.1834]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dim= -1 means apply the softmax function to the last dimension of the attention_scores tensor\n",
+    "# in this case that means normalize the scores for each token in the context window\n",
+    "# since the last dimension of the attention_scores tensor is the vector for each token\n",
+    "attention_weights = F.softmax(attention_scores, dim=-1)\n",
+    "attention_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3101, 0.5440, 0.5383],\n",
+       "        [0.3362, 0.5293, 0.5323],\n",
+       "        [0.2897, 0.6003, 0.4588],\n",
+       "        [0.3387, 0.5656, 0.4880],\n",
+       "        [0.3039, 0.5600, 0.5155],\n",
+       "        [0.3023, 0.5974, 0.4544]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_vectors = attention_weights @ inputs\n",
+    "context_vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([6, 6]), torch.Size([6, 3]), torch.Size([6, 3]))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attention_weights.shape, inputs.shape, context_vectors.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Left off 3.4"
+   ]
   }
  ],
  "metadata": {
