attention with weights and tensor dimensions

--- a/code/04_llms-from-scratch-book/3-attention.ipynb
+++ b/code/04_llms-from-scratch-book/3-attention.ipynb
@@ -349,7 +349,225 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Left off 3.4"
+    "# Self-Attention with weights\n",
+    "More specifically, scaled dot-product attention.\n",
+    "\n",
+    "### Three Trainable Weight Matrices\n",
+    "Wquery, Wkey, Wvalue.\n",
+    "\n",
+    "These three matrices project each embedding from our input tokens into their respective Query, Key, and Value vectors.\n",
+    "\n",
+    "The context vector = attention weighted sum of each value vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1300, 0.5500, 0.6800])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_4 = inputs[4] # Using the word \"light\" as our example again"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In practice, our KQV matrices will have fewer dimensions than our input.\n",
+    "\n",
+    "In multi-headed attention it's often: \n",
+    "```\n",
+    "model_input_dimensions / number_of_attention_heads = KQV output dimensions for each head\n",
+    "```\n",
+    "\n",
+    "In PyTorch - the last dimension of your input tensor must match the input_dimension size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_in = inputs.shape[-1] # last dimension of the input tensor, size of our token embeddings\n",
+    "d_out = 2 # arbitrary size for illustration purposes it is different\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_key   = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+    "W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[0.2961, 0.5166],\n",
+       "        [0.2517, 0.6886],\n",
+       "        [0.0740, 0.8665]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W_query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the vectors for our x_4 input\n",
+    "query_4 = x_4 @ W_query\n",
+    "key_4 = x_4 @ W_key\n",
+    "value_4 = x_4 @ W_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3]) torch.Size([3, 2]) torch.Size([2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.2272, 1.0351])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(x_4.shape, W_query.shape, query_4.shape)\n",
+    "query_4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([6, 2]) torch.Size([6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute for all inputs\n",
+    "keys = inputs @ W_key\n",
+    "values = inputs @ W_value\n",
+    "\n",
+    "print(keys.shape, values.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.1143, 0.6675, 0.8276, 0.9134, 0.9867, 0.7040])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute unnormalized attention scores, for one token\n",
+    "attention_score_4 = query_4.dot(keys[4])\n",
+    "\n",
+    "# Compute attention scores for all tokens for a given query\n",
+    "attention_scores_4 = query_4 @ keys.T\n",
+    "attention_scores_4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0000)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the attention weights with softmax (scaled by sqrt of embedding size)\n",
+    "d_k = keys.shape[-1]\n",
+    "attention_weights_4 = torch.softmax(attention_scores_4 / (d_k ** 0.5), dim=-1)\n",
+    "sum(attention_weights_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.2620, 0.7043])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the context vector for the token \"light\"\n",
+    "context_vector_4 = attention_weights_4 @ values\n",
+    "context_vector_4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "left off 3.4.2"
    ]
   }
  ],
