--- a/code/04_llms-from-scratch-book/3-attention.ipynb
+++ b/code/04_llms-from-scratch-book/3-attention.ipynb
@@ -567,7 +567,372 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "left off 3.4.2"
+    "# SelfAttention Class\n",
+    "\n",
+    "Linear layers replace the matrix multiplication (equivalent operatoin just with better weight initialization).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.2480, -0.0219],\n",
+      "        [ 0.2481, -0.0209],\n",
+      "        [ 0.2488, -0.0185],\n",
+      "        [ 0.2487, -0.0175],\n",
+      "        [ 0.2482, -0.0210],\n",
+      "        [ 0.2489, -0.0177]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SelfAttention(torch.nn.Module):\n",
+    "    def __init__(self, d_in, d_out, qkv_bias=False):\n",
+    "        super(SelfAttention, self).__init__()\n",
+    "        # Initialize the linear layers (weight matrices) for the query, key, and value\n",
+    "        self.W_query = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        # Compute the query, key, and value vectors for all tokens in the input\n",
+    "        # (matrix multiplication of the input tensor with the weight matrices)\n",
+    "        keys = self.W_key(inputs)\n",
+    "        queries = self.W_query(inputs)\n",
+    "        values = self.W_value(inputs)\n",
+    "\n",
+    "        # Compute the unnormalized attention scores for a given query\n",
+    "        # (dot product between the query vector of each token and the key vectors of all tokens)\n",
+    "        attention_scores = queries @ keys.T\n",
+    "        d_k = keys.shape[-1]\n",
+    "        # Normalize with softmax\n",
+    "        attention_weights = torch.softmax(attention_scores / (d_k ** 0.5), dim=-1)\n",
+    "\n",
+    "        # Compute the context vector for each token\n",
+    "        context_vector = attention_weights @ values\n",
+    "        return context_vector\n",
+    "    \n",
+    "self_attention = SelfAttention(d_in=3, d_out=2)\n",
+    "print(self_attention(inputs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Causal Attention\n",
+    "\n",
+    "Mask future words in a sequence so not looking a head.\n",
+    "\n",
+    "1. Mask the unnormalizd attention scores aobve the diagonal (future words) with negative infinity.\n",
+    "2. Then normalize with softmax.\n",
+    "3. Optionally apply dropout after computing the attention weights "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1339,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [-0.1302, -0.0741,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [ 0.0732,  0.0379,  0.0315,    -inf,    -inf,    -inf],\n",
+       "        [-0.0057, -0.0097, -0.0499, -0.0668,    -inf,    -inf],\n",
+       "        [-0.0730, -0.0409, -0.0532, -0.0537, -0.0646,    -inf],\n",
+       "        [ 0.0839,  0.0422,  0.0275,  0.0157,  0.0663,  0.0084]],\n",
+       "       grad_fn=<MaskedFillBackward0>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get attention scores for all tokens\n",
+    "queries = self_attention.W_query(inputs)\n",
+    "keys = self_attention.W_key(inputs)\n",
+    "attention_scores = queries @ keys.T\n",
+    "\n",
+    "# Create the mask and apply it to our attention scores\n",
+    "context_length = inputs.shape[0]\n",
+    "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "masked = attention_scores.masked_fill(mask.bool(), -torch.inf)\n",
+    "masked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.4901, 0.5099, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3394, 0.3310, 0.3295, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2548, 0.2541, 0.2470, 0.2441, 0.0000, 0.0000],\n",
+       "        [0.1978, 0.2023, 0.2005, 0.2005, 0.1989, 0.0000],\n",
+       "        [0.1718, 0.1668, 0.1651, 0.1637, 0.1697, 0.1629]],\n",
+       "       grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the attention weights with the masked scores\n",
+    "masked_attention_weights = torch.softmax(masked / keys.shape[-1]**0.5, dim=-1)\n",
+    "masked_attention_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.9802, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.6788, 0.6621, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5097, 0.5082, 0.0000, 0.4881, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.3302, 0.0000, 0.3394, 0.0000]],\n",
+       "       grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply dropout to the masked attention weights\n",
+    "# non dropping out weights are scaled by 1/(1-p) to keep the expected value of the output the same\n",
+    "dropout = torch.nn.Dropout(0.5)\n",
+    "masked_with_dropout = dropout(masked_attention_weights)\n",
+    "masked_with_dropout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Causal Self-Attention with Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 3])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make batches of inputs so can test loading multiple inputs\n",
+    "batch = torch.stack((inputs, inputs), dim=0)\n",
+    "batch.shape\n",
+    "# 2 batches of 6 tokens with 3 dimensions each"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.0000,  0.0000],\n",
+      "         [-0.2933, -0.3942],\n",
+      "         [-0.3239, -0.4191],\n",
+      "         [-0.3118, -0.2910],\n",
+      "         [ 0.0000,  0.0000],\n",
+      "         [-0.1207, -0.0910]],\n",
+      "\n",
+      "        [[ 0.0000,  0.0000],\n",
+      "         [-0.2933, -0.3942],\n",
+      "         [-0.3239, -0.4191],\n",
+      "         [-0.3118, -0.2910],\n",
+      "         [ 0.0000,  0.0000],\n",
+      "         [-0.1207, -0.0910]]], grad_fn=<CloneBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CausalAttention(torch.nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.W_query = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        # Initialize dropout\n",
+    "        self.dropout = torch.nn.Dropout(dropout)\n",
+    "        # register_buffer is used to store the mask in the model's state_dict\n",
+    "        # it is not a trainable parameter\n",
+    "        self.register_buffer('mask', torch.triu(torch.ones(context_length, context_length), diagonal=1))\n",
+    "\n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        batch_size, num_tokens, d_in = inputs.shape\n",
+    "        keys = self.W_key(inputs)\n",
+    "        queries = self.W_query(inputs)\n",
+    "        values = self.W_value(inputs)\n",
+    "\n",
+    "        attention_scores = queries @ keys.transpose(1, 2) # TODO - changes b/c of batch?\n",
+    "        # _ means function in pytorch occurs in place\n",
+    "        # num_tokens instead of context_length b/c of may vary between batches\n",
+    "        attention_scores.masked_fill_(self.mask.bool()[:num_tokens, :num_tokens], -torch.inf)\n",
+    "        attention_weights = torch.softmax(attention_scores / (keys.shape[-1] ** 0.5), dim=-1)\n",
+    "        attention_weights = self.dropout(attention_weights)\n",
+    "\n",
+    "        # Copmute the context vector for each token\n",
+    "        context_vector = masked_with_dropout @ values\n",
+    "        return context_vector\n",
+    "    \n",
+    "causal_attention = CausalAttention(d_in=3, d_out=2, context_length=6, dropout=0.5)\n",
+    "print(causal_attention(batch))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multihead Attention\n",
+    "\n",
+    "We could just stack single-head attention layers, but it's more efficient to use a 3 single matrices for QKV and split for each attention head."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 6, 3])\n",
+      "tensor([[[0.2958, 0.4672],\n",
+      "         [0.2963, 0.4761],\n",
+      "         [0.2559, 0.4713],\n",
+      "         [0.2581, 0.4334],\n",
+      "         [0.2586, 0.4435],\n",
+      "         [0.2442, 0.4428]],\n",
+      "\n",
+      "        [[0.2958, 0.4672],\n",
+      "         [0.2963, 0.4761],\n",
+      "         [0.2559, 0.4713],\n",
+      "         [0.2581, 0.4334],\n",
+      "         [0.2586, 0.4435],\n",
+      "         [0.2442, 0.4428]]], grad_fn=<ViewBackward0>)\n",
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MultiHeadAttention(torch.nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \\\n",
+    "            \"d_out must be divisible by num_heads\"\n",
+    "\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        # The size of each individual head \n",
+    "        self.head_dim = d_out // num_heads\n",
+    "\n",
+    "        # Same as before\n",
+    "        self.W_query = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = torch.nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        # this out_proj isn't necessary, but it's a common practice to combine the head outputs\n",
+    "        self.out_proj = torch.nn.Linear(d_out, d_out)\n",
+    "        self.dropout = torch.nn.Dropout(dropout)\n",
+    "        self.register_buffer(\n",
+    "            \"mask\",\n",
+    "            torch.triu(torch.ones(context_length, context_length),\n",
+    "                       diagonal=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        batch_size, num_tokens, d_in = x.shape\n",
+    "\n",
+    "        keys = self.W_key(x) # Shape: (b, num_tokens, d_out)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "\n",
+    "        # We implicitly split the matrix by adding a `num_heads` dimension\n",
+    "        # Unroll last dim: (b, num_tokens, d_out) -> (b, num_tokens, num_heads, head_dim)\n",
+    "        # This is how we allow each head to attend to different parts of the sequence\n",
+    "        # we add a new dimension to our tensor for each head\n",
+    "        keys = keys.view(batch_size, num_tokens, self.num_heads, self.head_dim) \n",
+    "        values = values.view(batch_size, num_tokens, self.num_heads, self.head_dim)\n",
+    "        queries = queries.view(batch_size, num_tokens, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        # Transpose: (b, num_tokens, num_heads, head_dim) -> (b, num_heads, num_tokens, head_dim)\n",
+    "        # This transpose allows us to perform the matrix multiplication on each head separately\n",
+    "        # now each head is a bathc of tokens of head_dim size\n",
+    "        keys = keys.transpose(1, 2)\n",
+    "        queries = queries.transpose(1, 2)\n",
+    "        values = values.transpose(1, 2)\n",
+    "\n",
+    "        # Compute scaled dot-product attention (aka self-attention) with a causal mask\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)  # Dot product for each head\n",
+    "\n",
+    "        # Original mask truncated to the number of tokens and converted to boolean\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]\n",
+    "\n",
+    "        # Use the mask to fill attention scores\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)\n",
+    "        \n",
+    "        attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        # Shape: (b, num_tokens, num_heads, head_dim)\n",
+    "        context_vec = (attn_weights @ values).transpose(1, 2) \n",
+    "        \n",
+    "        # Combine heads, where self.d_out = self.num_heads * self.head_dim\n",
+    "        context_vec = context_vec.contiguous().view(batch_size, num_tokens, self.d_out)\n",
+    "        context_vec = self.out_proj(context_vec) # optional projection\n",
+    "\n",
+    "        return context_vec\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "\n",
+    "print(batch.shape)\n",
+    "batch_size, context_length, d_in = batch.shape\n",
+    "d_out = 2\n",
+    "mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads=2)\n",
+    "\n",
+    "context_vecs = mha(batch)\n",
+    "\n",
+    "print(context_vecs)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
    ]
   }
  ],
