add test, handle file metadata

--- a/code/06_fine-tuning-second-brain/explore.ipynb
+++ b/code/06_fine-tuning-second-brain/explore.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from llama_index.readers.obsidian import ObsidianReader\n",
-    "from obsidian_reader import ObsidianReader as MyObsidianReader"
+    "from my_obsidian_reader import ObsidianReader as MyObsidianReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,20 +25,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(documents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "llama_index.core.schema.Document"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(documents[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(id_='a9912f0b-26c4-40ef-8669-26281c306324', embedding=None, metadata={'filename': 'YT - data pruning mnist.md', 'folder_name': '.', 'created_at': '2025-01-30T07:01:57.868417', 'modified_at': '2025-01-27T12:07:56.664999'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text_resource=MediaResource(embeddings=None, data=None, text='\\n\\nTitle\\nAi doesn’t need more data: my data pruning experiments\\nMy adventures with data pruning\\nBlog - data pruning for better ai: 99% accuracy with half the data in mnist\\nData Pruning MNIST: 99% accurate using half the data\\n99% accuracy with half the data\\nMnist data pruning: how I hit 99% using half the data\\nThumbnail text\\nLess data, better ai\\nbubble plot visual', path=None, url=None, mimetype=None), image_resource=None, audio_resource=None, video_resource=None, text_template='{metadata_str}\\n\\n{content}')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[2]"
    ]
   },
   {
@@ -46,9 +88,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "documents[2]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
