move previous attempt, simpler obsidian reader, tests

--- a/code/06_obsidian-rag-fine-tuning/exploration/explore.ipynb
+++ b/code/06_obsidian-rag-fine-tuning/exploration/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "154"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "llama_index.core.schema.Document"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,22 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Document(id_='d982aff8-ea08-48aa-ad7a-4a3ac62ad5fa', embedding=None, metadata={'filename': 'YT - data pruning mnist.md', 'folder_name': '.', 'created_at': '2025-01-30T07:01:57.868417', 'modified_at': '2025-01-27T12:07:56.664999', 'wiki_links': ['PMOC - Data Pruning MNIST', 'MiniPile Challenge for Data-Efficient Language Models', 'Paper - Beyond Neural Scaling Laws - beating power law scaling via data pruning', 'More authentic content']}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text_resource=MediaResource(embeddings=None, data=None, text='\\n\\nTitle\\nAi doesn’t need more data: my data pruning experiments\\nMy adventures with data pruning\\nBlog - data pruning for better ai: 99% accuracy with half the data in mnist\\nData Pruning MNIST: 99% accurate using half the data\\n99% accuracy with half the data\\nMnist data pruning: how I hit 99% using half the data\\nThumbnail text\\nLess data, better ai\\nbubble plot visual', path=None, url=None, mimetype=None), image_resource=None, audio_resource=None, video_resource=None, text_template='{metadata_str}\\n\\n{content}')"
+       "Document(id_='8994eeaf-a828-49ff-816d-95a70e81d395', embedding=None, metadata={'filename': 'YT - data pruning mnist.md', 'folder_name': '.', 'created_at': '2025-01-30T07:01:57.868417', 'modified_at': '2025-01-27T12:07:56.664999', 'wiki_links': ['PMOC - Data Pruning MNIST', 'MiniPile Challenge for Data-Efficient Language Models', 'Paper - Beyond Neural Scaling Laws - beating power law scaling via data pruning', 'More authentic content']}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text_resource=MediaResource(embeddings=None, data=None, text='\\n\\nThumbnail\\nImage of the digit\\nmaybe image of convultional network\\nX% accuracy with 1% of the data???', path=None, url=None, mimetype=None), image_resource=None, audio_resource=None, video_resource=None, text_template='{metadata_str}\\n\\n{content}')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "documents[2]"
+    "documents[3]\n"
    ]
   },
   {
