new qa set on just joyspan

--- a/code/06_obsidian-rag-fine-tuning/cluster_by_similarity.ipynb
+++ b/code/06_obsidian-rag-fine-tuning/cluster_by_similarity.ipynb
@@ -13,6 +13,7 @@
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "from llama_index.core import Settings\n",
     "\n",
+    "# NOTE - this will cause a shape mismatch b.c I embedded wiht OPEN AI\n",
     "# Use this so don't need to bother with API key to default OPENAI model\n",
     "Settings.embed_model = HuggingFaceEmbedding(\n",
     "    model_name=\"BAAI/bge-small-en-v1.5\", device=\"cpu\"  # Use \"cuda\" for GPU acceleration\n",
