--- a/code/09_time-series-ai-30-days/self-attention.ipynb
+++ b/code/09_time-series-ai-30-days/self-attention.ipynb
@@ -164,25 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "shape '[40, 32, 128]' is invalid for input of size 5120",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m128\u001b[39m) \n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Reshape to [4*10, 32, 128] where 32 is the patch size\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m time_embeddings \u001b[38;5;241m=\u001b[39m \u001b[43membeddings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m40\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m128\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Initialize time-wise projection matrices\u001b[39;00m\n\u001b[1;32m      6\u001b[0m W_time_query \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m128\u001b[39m, \u001b[38;5;241m64\u001b[39m)  \u001b[38;5;66;03m# embedding_dim -> query_dim\u001b[39;00m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: shape '[40, 32, 128]' is invalid for input of size 5120"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "embeddings = torch.randn(4, 10, 32, 128)  # [stocks, time_patches, patch_size, embedding_dim]\n",
     "\n",
-    "# Reshape to [4*10, 32, 128] where 32 is the patch size\n",
-    "time_embeddings = embeddings.reshape(40, 32, 128)\n",
+    "time_embeddings = embeddings.reshape(40, 32, 128) # [stocks*time_patches, patch_size, embedding_dim]\n",
     "\n",
     "# Initialize time-wise projection matrices\n",
     "W_time_query = torch.randn(128, 64)  # embedding_dim -> query_dim\n",
@@ -204,11 +192,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([40, 32, 128])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_context.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "space_embeddings = time_context.reshape(10, 4, 128)\n",
+    "# Reshape back for space-wise attention\n",
+    "time_context_reshaped = time_context.reshape(4, 10, 32, 128)\n",
+    "\n",
+    "# From [stocks, time_patches, timesteps, features]\n",
+    "# To [stocks, timesteps, time_patches, features]\n",
+    "transposed = time_context_reshaped.transpose(1, 2)  # Shape: [4, 32, 10, 128]\n",
+    "\n",
+    "# From [stocks, timesteps, time_patches, features]\n",
+    "# To [stocks*timesteps, time_patches, features]\n",
+    "space_embeddings = transposed.reshape(4*32, 10, 128)  # Shape: [128, 10, 128]\n",
     "\n",
     "# Initialize space-wise projection matrices\n",
     "W_space_query = torch.randn(128, 64)  # embedding_dim -> query_dim\n",
@@ -224,6 +241,26 @@
     "space_scores = torch.matmul(space_Q, space_K.transpose(-2, -1)) / (64 ** 0.5)\n",
     "space_weights = torch.softmax(space_scores, dim=-1)\n",
     "space_context = torch.matmul(space_weights, space_V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([128, 10, 128])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "space_context.shape"
    ]
   }
  ],
