correct tensor dimensions and space-wise attention

--- a/code/09_time-series-ai-30-days/self-attention.ipynb
+++ b/code/09_time-series-ai-30-days/self-attention.ipynb
@@ -14,8 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View an illustrated walkthrough here: https://bitsofchris.com/p/how-to-implement-factorized-attention"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = torch.randn(4, 10, 32, 128)  # [stocks, time_patches, patch_size, embedding_dim]\n",
+    "embeddings = torch.randn(4, 10, 128)  # [batch_size=1, stocks, time_patches, embedding_dim]\n",
     "\n",
-    "time_embeddings = embeddings.reshape(40, 32, 128) # [stocks*time_patches, patch_size, embedding_dim]\n",
+    "time_embeddings = embeddings.reshape(4, 10, 128) # [batch_size=1 * stocks, time_patches, embedding_dim]\n",
     "\n",
     "# Initialize time-wise projection matrices\n",
     "W_time_query = torch.randn(128, 64)  # embedding_dim -> query_dim\n",
@@ -182,7 +189,7 @@
     "time_K = torch.matmul(time_embeddings, W_time_key)\n",
     "time_V = torch.matmul(time_embeddings, W_time_value)\n",
     "\n",
-    "# Compute time-wise attention (only showing one direction)\n",
+    "# Compute time-wise attention\n",
     "time_scores = torch.matmul(time_Q, time_K.transpose(-2, -1)) / (64 ** 0.5)\n",
     "time_weights = torch.softmax(time_scores, dim=-1)\n",
     "\n",
@@ -192,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([40, 32, 128])"
+       "torch.Size([4, 10, 128])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,55 +219,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reshape back for space-wise attention\n",
-    "time_context_reshaped = time_context.reshape(4, 10, 32, 128)\n",
+    "# Reshape for space-wise attention\n",
+    "space_embeddings = time_context.transpose(0, 1)  # shape: [10, 4, 128]\n",
     "\n",
-    "# From [stocks, time_patches, timesteps, features]\n",
-    "# To [stocks, timesteps, time_patches, features]\n",
-    "transposed = time_context_reshaped.transpose(1, 2)  # Shape: [4, 32, 10, 128]\n",
+    "W_space_query = torch.randn(128, 64)   \n",
+    "W_space_key   = torch.randn(128, 64)   \n",
+    "W_space_value = torch.randn(128, 128) \n",
     "\n",
-    "# From [stocks, timesteps, time_patches, features]\n",
-    "# To [stocks*timesteps, time_patches, features]\n",
-    "space_embeddings = transposed.reshape(4*32, 10, 128)  # Shape: [128, 10, 128]\n",
-    "\n",
-    "# Initialize space-wise projection matrices\n",
-    "W_space_query = torch.randn(128, 64)  # embedding_dim -> query_dim\n",
-    "W_space_key = torch.randn(128, 64)    # embedding_dim -> key_dim\n",
-    "W_space_value = torch.randn(128, 128)  # embedding_dim -> value_dim\n",
-    "\n",
-    "# Project to new Q, K, V\n",
+    "# space_embeddings.shape = [10, 4, 128]\n",
     "space_Q = torch.matmul(space_embeddings, W_space_query)\n",
-    "space_K = torch.matmul(space_embeddings, W_space_key)\n",
+    "space_K = torch.matmul(space_embeddings, W_space_key)   \n",
     "space_V = torch.matmul(space_embeddings, W_space_value)\n",
     "\n",
-    "# Compute space-wise attention\n",
-    "space_scores = torch.matmul(space_Q, space_K.transpose(-2, -1)) / (64 ** 0.5)\n",
-    "space_weights = torch.softmax(space_scores, dim=-1)\n",
+    "# Compute the space-waise attention\n",
+    "space_scores = torch.matmul(space_Q, space_K.transpose(-2, -1)) / (64.0 ** 0.5)\n",
+    "space_weights = torch.softmax(space_scores, dim=-1)  # shape: [10, 4, 4]\n",
+    "\n",
+    "# Weighted sum over values => [10, 4, 128]\n",
     "space_context = torch.matmul(space_weights, space_V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([128, 10, 128])"
+       "torch.Size([10, 4, 128])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "space_context.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 10, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shape: [10, 4, 128] -> [4, 10, 128]\n",
+    "space_context = space_context.transpose(0, 1)\n",
+    "print(space_context.shape)"
    ]
   }
  ],
